fix(button): fix icon alignment (#430)
* fix(button): fix icon alignment in button

* fix(button-icon): fix alignment

* fix(spin): add vertical align

--- a/src/button/button.css
+++ b/src/button/button.css
@@ -42,7 +42,6 @@
     }
 
     &__icon {
-        display: inline-flex;
         padding-right: 10px;
         line-height: 1;
     }
